--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 </a>
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
-                <span class="silde-title">活着，想那么多干嘛!</span>
+                <span class="silde-title">求知若渴，虚怀若愚!</span>
             </li>
 
             <li class="swiper-slide">
