--- a/templates/articles.html
+++ b/templates/articles.html
@@ -2,7 +2,7 @@
 {% load custom_filter %}
 
 {% block title %}
-    <title>博客列表 - 烂笔头</title>
+    <title>博客列表 - 极客浩浩</title>
 {% endblock %}
 
 {% block content %}
