--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,7 +2,7 @@
 {% load custom_filter %}
 
 {% block title %}
-    <title>{{ article.title }} - 烂笔头</title>
+    <title>{{ article.title }} - 极客浩浩</title>
 {% endblock %}
 
 {% block meta %}
