--- a/templates/link.html
+++ b/templates/link.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    <title>链接 - 烂笔头 </title>
+    <title>链接 - 极客浩浩 </title>
 {% endblock %}
 
 {% block content %}
