--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    <title>留言板 - 烂笔头</title>
+    <title>留言板 - 极客浩浩</title>
 {% endblock %}
 
 {% block content %}
