--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    <title>搜索:{{ key }} - 烂笔头</title>
+    <title>搜索:{{ key }} - 极客浩浩</title>
 {% endblock %}
 
 {% load custom_filter %}
