--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,43 @@
 {% endblock %}
 
 {% block content %}
-    <section class="mysection" style="animation: fuxiasuo 0.8s;">页面建设中。。。。</section>
+    <section class="mysection" style="animation: fuxiasuo 0.8s;">
+        <p class="p1"><span style="text-align:center;font-size: 18px">要和比你努力的人在一起</span></p>
+        <p>---author:励志短篇---</p>
+　　都说要想要进步，一定要迈出自己的舒适圈。
+　　舒适圈之所以舒适，就是因为大家都一样，你好我好大家好，每个人的水平差不多，自然会有很多共同的语言，如果你稍微有所警觉，想要迈出一步，肯定同伴们就会看你是个另类，有时更会迫不急待地把你又拉回来。
+　　可能你还想着原来还是朋友最好啊，殊不知，我们已经离自己的进步越来越远了。
+　　1、要迈出舒适圈
+　　以前的同事丽最近和我通电话，她说不想在老家待了，可能过段时间会来上海继续找工作，让我帮她留意着需要招人的单位。
+　　丽比我小几岁，毕业于北京的一所一本院校，当时在北京的一家公司工作了一两年就被父母叫了回去，她本来学习勤奋、又能吃苦、手脚也麻利，如果继续干，说不定还是很有出息的。
+　　可那时乖巧听话的她不想父母伤心，就听从了父母的安排。但回去后，虽说安稳，也在父母身边，可总觉得每天的时间浪费太多。她工作轻闲，薪水虽稳定，但若想赚多点也不可能，周围的朋友们一个个天天下班就约她逛街打麻将，她要是去了觉得这么多时间浪费了太可惜，不去吧，朋友们又说她另类。 最近，看到好多一线城市单位在招聘，她的要求很符合条件，于是就决定来了。
+　　她说：“她宁可当凤尾，也不想当鸡头”。
+　　其实这句话说的就是要到凤凰中去，即使当不了凤头也没关系，岂码环境对于自身进步是很有利的，在鸡群中就是再努力哪怕当上了头也成不了凤凰。
+　　2、到优秀的人群中去
+　　在《我不惧怕成为这样强硬的姑娘》这本书中，刘媛媛就说：
+　　“我喜欢到竞争激烈的地方去，喜欢跟比我更努力的人在一起并且享受那种压迫感，这样才能更大限度地激发潜能，如果发现自己总是跟一群令我觉得舒服的朋友在一起，心里反而要警惕一下，自己最近是不是没有任何一点进步？”
+　　这也让我想到了自己的亲身体会。
+　　以前我和很多书评写作者在一起就会感觉差他们太多，同样一篇书评，别人写得那么好，自己怎么写的那么差，通过不断地学习、跟进，稍微有点进步了，后来成为富兰克林读书俱乐部的签约作者，更是让我不敢放松、不断精进。
+　　第一次加入签约作者群时，就被吓了一跳，里面有出过很多书的青年作家，有随便一写就能上人民日报的新生代作者，也有一个月除了工作、讲课还能拿到稿费之王的拼命三郎，我在这些大咖面前简直就是个小白。
+　　自己只好每天默默努力，少说多做认真写，向他们多学习。
+　　3、默默努力学习
+　　我以前写的大多都是书评，和平台要求的风格还有些差距，于是我就想办法多阅读、多找素材、多向那些努力上进的优秀作者学习。
+　　记得第一次交稿时，内容总监说不行，要修改。
+　　修改好了交上去，她又说还不行；
+　　第三稿、第四稿、直到修改了五、六稿，甚至七、八稿才通过。
+　　那时被虐得很惨，但是回头看自己的文章水平还是有所进步的。
+　　如果当时不和这些优秀努力的人在一起，都不知道自己的文笔有多烂。
+　　人就是在这样的环境中一点点成长起来的。
+　　和她们在一起学到的知识将是我人生中的一笔巨大财富。
+　　最近写的一些稿件给编辑审核时，她们都说我比以前有进步了，甚至有几次都是不用怎么修改，一遍就过稿的。
+　　如果当时没有这些努力的同行者，又怎么会有我现在的点滴进步。
+　　4、和努力者前行
+　　我们真正的敌人，是生活的考验，是自己的懒散，并不是说要比周围所有人都强都棒，才能成为人生的赢家，而是要向那些比你强比你棒的人学习，找到对付自己人生的最佳状态。
+　　有句话说得好：
+　　普通人的圈子，谈论的是闲事，赚的是工资，想的是明天；
+　　中产的圈子，谈论的是项目，赚的是利润，想的是下一年；
+　　富豪的圈子，谈论的是机会，赚的是财富，想到的是未来和保障。
+　　我们要多和比自己努力优秀的人在一起，这样才能一步步长成自己喜欢的样子。
+    </section>
 
 {% endblock %}
