--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
             <li class="swiper-slide">
                 <a href="#" title="活着，想那么多干嘛!">
-                    <img src="../static/images/1.jpg"
+                    <img src="/static/images/1.jpg"
                          alt="活着，想那么多干嘛!"/>
                 </a>
                 <!-- Add Pagination -->
@@ -18,7 +18,7 @@
 
             <li class="swiper-slide">
                 <a href="#" title="Life is short, use Python">
-                    <img src="../static/images/2.jpg"
+                    <img src="/static/images/2.jpg"
                          alt="Life is short, use Python"/>
                 </a>
                 <!-- Add Pagination -->
