--- a/templates/link.html
+++ b/templates/link.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class="mysection" style="animation: fuxiasuo 0.8s;">页面建设中。。。。</section>
-
+    <section class="mysection" style="animation: fuxiasuo 0.8s;">
+        极客浩浩博客网站：<a href="http://www.cnblogs.com/haoxinchen/">http://www.cnblogs.com/haoxinchen/</a>
+    </section>
 {% endblock %}
