--- a/templates/right.html
+++ b/templates/right.html
@@ -9,8 +9,8 @@
             <div><a class="benbo" href="https://github.com/jikehaohao/myblog" target="_blank"><i
                     class="el-download-alt"></i></a><span>博客源码</span></div>
             <div><a class="taobao"
-                    href="http://10.10.67.122:6060/"
-                    target="_blank"><i class="el-blogger"></i></a><span>博客地址</span></div>
+                    href="http://www.cnblogs.com/haoxinchen/"
+                    target="_blank"><i class="el-blogger"></i></a><span>个人博客</span></div>
             <div><a class="side-fx"><i class="el-share-alt"></i></a><span>分享本博</span></div>
             <div><a class="mail-btn" href="javascript:;"><i class="el-envelope"></i></a><span>订阅我</span></div>
         </div>
