--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 
     {% block title %}
-        <title>极客浩浩 -个人博客</title>
+        <title>极客浩浩 - 动漫之家</title>
     {% endblock %}
 
     {% block meta %}
